# electora-core

./: .editorconfig  Cargo.toml  Justfile  Pipfile  README.md  index.html  pyproject.toml
src/: lib.rs
tests/: test_core.py
