[package]
name = "electora-core"
version = "0.1.0"
authors = ["Electora Team"]
description = "Electora Core"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]


[dependencies]
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pyo3 = { version = "0.15", features = ["extension-module"] }

